View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024309 | Open CASCADE | OCCT:Visualization | public | 2013-11-01 21:28 | 2013-12-19 13:58 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024309: TKOpenGl - Shader resources should be released with delay | ||||
Description | Current implementation of Shader Manager doesn't follow common style of delayed resource destruction. This also lead to possible crashes in GL driver when window is closed unexpectedly in wrong order. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
occt: master 05dd08ce 2013-11-01 17:33:17
Committer: abv Details Diff |
0024309: TKOpenGl - Delay release of GLSL resources |
Affected Issues 0024309 |
|
mod - src/OpenGl/OpenGl_AspectFace.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderProgram.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-11-01 21:28 | kgv | New Issue | |
2013-11-01 21:28 | kgv | Assigned To | => kgv |
2013-11-01 21:28 | kgv | Relationship added | related to 0024250 |
2013-11-01 21:34 | kgv | Note Added: 0026430 | |
2013-11-01 21:34 | kgv | Assigned To | kgv => apl |
2013-11-01 21:34 | kgv | Status | new => resolved |
2013-11-05 07:47 |
|
Note Added: 0026442 | |
2013-11-05 07:47 |
|
Assigned To | apl => bugmaster |
2013-11-05 07:47 |
|
Status | resolved => reviewed |
2013-11-05 08:03 |
|
Relationship added | related to 0024315 |
2013-11-06 11:07 |
|
Changeset attached | => occt master 05dd08ce |
2013-11-06 11:07 |
|
Assigned To | bugmaster => abv |
2013-11-06 11:07 |
|
Status | reviewed => verified |
2013-11-06 11:07 |
|
Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |