0024309: TKOpenGl - Delay release of GLSL resources